# Software-Architecture-Handbook

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
Model-View-Controller/: README.md
Model-View-Controller/.github/workflows/: python-ci.yml
Model-View-Controller/code-examples/python/: controller.py  main.py  model.py  view.py
Model-View-Controller/code-examples/python/tests/: test_controller.py  test_model.py  test_mvc_model.py
contact_book_app/: README.md  pyproject.toml
contact_book_app/infrastructure/: in_memory_repository.py
contact_book_app/src/: main.py
contact_book_app/src/contact_book_app/: main.py
contact_book_app/src/contact_book_app/domain/: observer.py  repository.py
contact_book_app/src/contact_book_app/infrastructure/: in_memory_repository.py
contact_book_app/src/contact_book_app/presentation/: cli_controller.py  cli_view.py
contact_book_app/src/domain/: model.py  observer.py  repository.py
contact_book_app/src/infrastructure/: in_memory_repository.py
contact_book_app/src/presentation/: cli_view.py
contact_book_app/tests/: test_cli_controller.py  test_cli_view.py  test_contact_service.py  test_repository.py
